<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ustone.myubond.MainActivity" >

    <item  
        android:id="@+id/action_scan"  
        android:orderInCategory="100"
        android:title="@string/scan"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/main_setting"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_message"
        android:orderInCategory="100"
        android:title="@string/main_message"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_security"
        android:orderInCategory="100"
        android:title="@string/main_security"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_sports"
        android:orderInCategory="100"
        android:title="@string/main_sports"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_health"
        android:orderInCategory="100"
        android:title="@string/main_health"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cheers"
        android:orderInCategory="100"
        android:title="@string/main_cups"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pushmessage"
        android:orderInCategory="100"
        android:title="@string/main_push"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rawdata"
        android:orderInCategory="100"
        android:title="@string/main_rawdata"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/main_clear"
        app:showAsAction="never" />
    
    
    <item
        android:id="@+id/action_disconn"
        android:orderInCategory="100"
        android:title="@string/main_disconnected"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_connect"
        android:orderInCategory="100"
        android:title="@string/main_connected"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rssi"
        android:orderInCategory="100"
        android:title="@string/main_connected"
        app:showAsAction="never" />

</menu>
