<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_drawer_hint_text"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/real_steps" />

        <TextView
            android:id="@+id/step_tv_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|left|center_vertical"
            android:text="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/real_heartrate"
            android:textColor="#FFCD41" />

        <TextView
            android:id="@+id/heart_tv_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|left|center_vertical"
            android:text="0"
            android:textColor="#FFCD41" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/real_temeprature"
            android:textColor="#ff33b5e5" />

        <TextView
            android:id="@+id/temp_tv_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|left|center_vertical"
            android:text="0"
            android:textColor="#ff33b5e5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/real_pressure"
            android:textColor="#458B00" />

        <TextView
            android:id="@+id/at_tv_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|left|center_vertical"
            android:text="0"
            android:textColor="#458B00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/altitude"
            android:textColor="#4B0082" />

        <TextView
            android:id="@+id/al_tv_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|left|center_vertical"
            android:text="0"
            android:textColor="#4B0082" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/envir_tempeature"
            android:textColor="#CD0000" />

        <TextView
            android:id="@+id/am_tv_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|left|center_vertical"
            android:text="0"
            android:textColor="#CD0000" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:padding="5dp"
        android:text="@string/real_data_chart" />

    <lecho.lib.hellocharts.view.LineChartView
        android:id="@+id/line_chart"
        android:layout_width="fill_parent"
        android:layout_height="360dp"
        android:background="#ffffff" />


</LinearLayout>
