<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/drawer_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/design_default_color_background"
            android:orientation="vertical"
            android:paddingTop="40dp">

            <com.baidu.mapapi.map.MapView
                android:id="@+id/b_map_View"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

            </com.baidu.mapapi.map.MapView>

            <LinearLayout
                android:id="@+id/btn_group"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/design_default_color_background"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/b_map_View"
                app:layout_constraintVertical_bias="0.0">

                <!--        <Button-->
                <!--            android:id="@+id/but_RoutrPlan"-->
                <!--            android:layout_width="wrap_content"-->
                <!--            android:layout_height="wrap_content"-->
                <!--            android:layout_weight="1"-->
                <!--            android:text="@string/plan"-->
                <!--            android:visibility="visible"-->
                <!--            tools:ignore="ButtonStyle" />-->
                <Button
                    android:id="@+id/but_Loc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/location"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/but_Attribute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attribute"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/but_Command"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/command"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <TextView
                android:id="@+id/view_attribute"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_alignBottom="@+id/b_map_View"
                android:layout_marginBottom="0dp"
                android:alpha="0.75"
                android:background="@android:color/darker_gray"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:textAppearance="@style/ClusterIcon.TextAppearance"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.example.location.CustomViewPager
                android:id="@+id/per_viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:visibility="invisible">

                <androidx.viewpager.widget.PagerTabStrip
                    android:id="@+id/per_pagertab"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center|top"
                    android:background="@color/material_drawer_hint_text">

                </androidx.viewpager.widget.PagerTabStrip>

            </com.example.location.CustomViewPager>

<!--            <LinearLayout-->
<!--                android:id="@+id/log_text"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="90dp"-->
<!--                android:background="@color/material_drawer_hint_text"-->
<!--                android:orientation="vertical">-->

<!--                <TextView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="30dp"-->
<!--                    android:gravity="center|center_horizontal|center_vertical"-->
<!--                    android:text="@string/device_log"-->
<!--                    android:textAppearance="@style/ClusterIcon.TextAppearance" />-->

<!--                <ListView-->
<!--                    android:id="@+id/device_list_view"-->
<!--                    style="@style/Widget.AppCompat.ListView.Menu"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:divider="@color/design_default_color_background"-->
<!--                    android:dividerHeight="1dp" />-->

<!--            </LinearLayout>-->

        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/design_nav_view"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/md_grey_700"
            android:orientation="vertical" />

    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>